--- a/src/app/components/query-tile/query-tile.component.html
+++ b/src/app/components/query-tile/query-tile.component.html
@@ -5,10 +5,10 @@
       <b *ngIf="item.type == 'Node'"> {{item.data.name}}</b>
       <b *ngIf="item.type == 'CancerNode'"> {{item.data.name}}</b> <br/>
 
-      <span><small *ngIf="item.type === 'CancerNode'">Cancer Driver Gene</small><small *ngIf="item.type === 'Node'">Gene</small> | </span>
-      <span *ngIf="item.data.entrezId"><small>Entrez: <b>{{item.data.entrezId}}</b></small> | </span>
-      <span *ngIf="item.data.uniprotAc"><small>AC: <b>{{item.data.uniprotAc}}</b></small></span>
-
+      <span><small *ngIf="item.type === 'CancerNode'">Cancer Driver Gene</small><small *ngIf="item.type === 'Node'">Gene</small></span>
+      <span *ngIf="item.data.entrezId">  |  <small>Entrez: <b>{{item.data.entrezId}}</b></small></span>
+      <span *ngIf="item.data.uniprotAc">  |  <small>AC: <b>{{item.data.uniprotAc}}</b></small></span>
+      <span *ngIf="item.data.proteinName">  |  <small>Protein: <b>{{item.data.proteinName}}</b></small></span>
     </ng-template>
   </ng-select>
 </div>
