fix download csv functions

--- a/src/app/components/analysis-panel/analysis-panel.component.html
+++ b/src/app/components/analysis-panel/analysis-panel.component.html
@@ -361,7 +361,7 @@
             <span class="icon"><i class="fa fa-dna"></i></span>
             <span>Genes ({{ tableNodes.length }})</span>
           </h4>
-          <a [href]="downloadLink('nodes')" class="button is-primary is-outlined is-pulled-right is-small">
+          <a [href]="downloadLink('genes')" class="button is-primary is-outlined is-pulled-right is-small">
             <span class="icon"><i class="fa fa-download"></i></span>
             <span>Download</span>
           </a>
